fixed valign wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,11 @@ footer.page-footer {
   text-align: center;
 }
 #center-logo{
-  padding-top: 25em;
+  margin: 0 auto;
 }
 
 #text-logo{
-  max-width: 50%;
+  max-width: 70%;
   display: block;
   margin: 0 auto;
 }
@@ -213,11 +213,11 @@ footer.page-footer {
   #text-logo{
     width: 90% !important;
     max-width: 100% !important;
-  }
+  }/*
   #center-logo{
     padding-top: 21rem;
   }
-  #index-banner{
+*/  #index-banner{
     background-image: url("../img/colored_egg_bg_mobile.jpg");
   }
 }
